--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@studio-freight/hamo": "0.6.28",
     "@studio-freight/lenis": "^1.0.34",
+    "@studio-freight/react-lenis": "0.0.43",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +28,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "3.2.4",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
